syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "OrderSubtypesProto";

package order;

import "routines.proto";
import "relay.proto";
import "common_options.proto";

import "ents/order_order.proto";
import "extra/order_order.proto";


message PurchaseOrderProto {
  option (routines.links) = "";
  option (bluecc.bundle_name) = "Order";
  string id = 1 [(google.api.graphql.relay_options).id = true];
  domain.OrderHeaderFlatData order_header=2;
  // components
  domain.OrderHeaderNoteList order_header_notes=3;
}

message SalesOrderProto {
  option (routines.links) = "";
  option (bluecc.bundle_name) = "Order";
  string id = 1 [(google.api.graphql.relay_options).id = true];
  domain.OrderHeaderFlatData order_header=2;
  // components
  domain.OrderHeaderNoteList order_header_notes=3;
}

